Make properties startup argument a Map instead of a Dictionary.
git-svn-id: https://svn.apache.org/repos/asf/incubator/pivot/trunk@784930 13f79535-47bb-0310-9956-ffa450edef68